--- a/BUILD.gn
+++ b/BUILD.gn
@@ -27,6 +27,8 @@ config("config") {
   if (is_fuchsia && flutter_enable_legacy_fuchsia_embedder) {
     defines = [ "LEGACY_FUCHSIA_EMBEDDER" ]
   }
+
+  cflags_cc = [ "-std=c++17" ]
 }
 
 config("export_dynamic_symbols") {
@@ -37,122 +39,125 @@ config("export_dynamic_symbols") {
 }
 
 group("flutter") {
-  testonly = true
-
-  # Compile the engine.
-  public_deps = [
-    "//flutter/shell/platform/embedder:flutter_engine",
-    "//flutter/sky",
-  ]
-
-  # If enbaled, compile the SDK / snapshot.
-  if (!is_fuchsia) {
-    public_deps += [
-      "//flutter/lib/snapshot:generate_snapshot_bin",
-      "//flutter/lib/snapshot:kernel_platform_files",
-    ]
-
-    if (current_toolchain == host_toolchain) {
-      public_deps += [
-        "//flutter/flutter_frontend_server:frontend_server",
-        "//third_party/dart:create_sdk",
-      ]
-
-      if (full_dart_sdk) {
-        public_deps += [ "//flutter/web_sdk" ]
-      }
-    }
-  }
-
-  # If on the host, compile tools.
-  if (current_toolchain == host_toolchain) {
-    public_deps += [
-      "//flutter/shell/testing",
-      "//flutter/tools/const_finder",
-      "//flutter/tools/font-subset",
-    ]
-  }
-
-  # Compile all benchmark targets if enabled.
-  if (enable_unittests && !is_win) {
-    public_deps += [
-      "//flutter/fml:fml_benchmarks",
-      "//flutter/lib/ui:ui_benchmarks",
-      "//flutter/shell/common:shell_benchmarks",
-      "//flutter/third_party/txt:txt_benchmarks",
-    ]
-  }
-
-  # Compile all unittests targets if enabled.
-  if (enable_unittests) {
-    public_deps += [
-      "//flutter/flow:flow_unittests",
-      "//flutter/fml:fml_unittests",
-      "//flutter/lib/ui:ui_unittests",
-      "//flutter/runtime:runtime_unittests",
-      "//flutter/shell/common:shell_unittests",
-      "//flutter/testing:testing_unittests",
-      "//flutter/third_party/txt:txt_unittests",
-    ]
-
-    if (is_fuchsia) {
-      public_deps += [ "//flutter/shell/platform/fuchsia:tests" ]
-    }
-
-    if (is_mac) {
-      public_deps +=
-          [ "//flutter/shell/platform/darwin:flutter_channels_unittests" ]
-    }
-
-    if (!is_win && !is_fuchsia) {
-      public_deps += [
-        "//flutter/shell/platform/android/external_view_embedder:android_external_view_embedder_unittests",
-        "//flutter/shell/platform/android/jni:jni_unittests",
-        "//flutter/shell/platform/android/platform_view_android_delegate:platform_view_android_delegate_unittests",
-      ]
-    }
-
-    # TODO(): Enable embedder_unittests on fucsia.
-    if (!is_fuchsia) {
-      public_deps += [ "//flutter/shell/platform/embedder:embedder_unittests" ]
-    }
-
-    # Unit tests for desktop embeddings should only be built if the desktop
-    # embeddings are being built.
-    if (enable_desktop_embeddings) {
-      public_deps += [
-        "//flutter/shell/platform/common/cpp:common_cpp_core_unittests",
-        "//flutter/shell/platform/common/cpp/client_wrapper:client_wrapper_unittests",
-      ]
-
-      if (!is_fuchsia) {
-        # These tests require the embedder and thus cannot run on fuchsia.
-        # TODO(): Enable when embedder works on fuchsia.
-        public_deps +=
-            [ "//flutter/shell/platform/common/cpp:common_cpp_unittests" ]
-
-        # These tests require GLFW and thus cannot run on fuchsia.
-        public_deps += [ "//flutter/shell/platform/glfw/client_wrapper:client_wrapper_glfw_unittests" ]
-      }
-
-      if (is_linux) {
-        public_deps +=
-            [ "//flutter/shell/platform/linux:flutter_linux_unittests" ]
-      }
-
-      if (is_mac) {
-        public_deps += [ "//flutter/shell/platform/darwin/macos:flutter_desktop_darwin_unittests" ]
-      }
-
-      if (is_win) {
-        public_deps += [
-          "//flutter/shell/platform/windows:flutter_windows_unittests",
-          "//flutter/shell/platform/windows/client_wrapper:client_wrapper_windows_unittests",
-        ]
-      }
-    }
-  }
 }
+
+# group("flutter") {
+#   testonly = true
+#
+#   # Compile the engine.
+#   public_deps = [
+#     "//flutter/shell/platform/embedder:flutter_engine",
+#     "//flutter/sky",
+#   ]
+#
+#   # If enbaled, compile the SDK / snapshot.
+#   if (!is_fuchsia) {
+#     public_deps += [
+#       "//flutter/lib/snapshot:generate_snapshot_bin",
+#       "//flutter/lib/snapshot:kernel_platform_files",
+#     ]
+#
+#     if (current_toolchain == host_toolchain) {
+#       public_deps += [
+#         "//flutter/flutter_frontend_server:frontend_server",
+#         "//third_party/dart:create_sdk",
+#       ]
+#
+#       if (full_dart_sdk) {
+#         public_deps += [ "//flutter/web_sdk" ]
+#       }
+#     }
+#   }
+#
+#   # If on the host, compile tools.
+#   if (current_toolchain == host_toolchain) {
+#     public_deps += [
+#       "//flutter/shell/testing",
+#       "//flutter/tools/const_finder",
+#       "//flutter/tools/font-subset",
+#     ]
+#   }
+#
+#   # Compile all benchmark targets if enabled.
+#   if (enable_unittests && !is_win) {
+#     public_deps += [
+#       "//flutter/fml:fml_benchmarks",
+#       "//flutter/lib/ui:ui_benchmarks",
+#       "//flutter/shell/common:shell_benchmarks",
+#       "//flutter/third_party/txt:txt_benchmarks",
+#     ]
+#   }
+#
+#   # Compile all unittests targets if enabled.
+#   if (enable_unittests) {
+#     public_deps += [
+#       "//flutter/flow:flow_unittests",
+#       "//flutter/fml:fml_unittests",
+#       "//flutter/lib/ui:ui_unittests",
+#       "//flutter/runtime:runtime_unittests",
+#       "//flutter/shell/common:shell_unittests",
+#       "//flutter/testing:testing_unittests",
+#       "//flutter/third_party/txt:txt_unittests",
+#     ]
+#
+#     if (is_fuchsia) {
+#       public_deps += [ "//flutter/shell/platform/fuchsia:tests" ]
+#     }
+#
+#     if (is_mac) {
+#       public_deps +=
+#           [ "//flutter/shell/platform/darwin:flutter_channels_unittests" ]
+#     }
+#
+#     if (!is_win && !is_fuchsia) {
+#       public_deps += [
+#         "//flutter/shell/platform/android/external_view_embedder:android_external_view_embedder_unittests",
+#         "//flutter/shell/platform/android/jni:jni_unittests",
+#         "//flutter/shell/platform/android/platform_view_android_delegate:platform_view_android_delegate_unittests",
+#       ]
+#     }
+#
+#     # TODO(): Enable embedder_unittests on fucsia.
+#     if (!is_fuchsia) {
+#       public_deps += [ "//flutter/shell/platform/embedder:embedder_unittests" ]
+#     }
+#
+#     # Unit tests for desktop embeddings should only be built if the desktop
+#     # embeddings are being built.
+#     if (enable_desktop_embeddings) {
+#       public_deps += [
+#         "//flutter/shell/platform/common/cpp:common_cpp_core_unittests",
+#         "//flutter/shell/platform/common/cpp/client_wrapper:client_wrapper_unittests",
+#       ]
+#
+#       if (!is_fuchsia) {
+#         # These tests require the embedder and thus cannot run on fuchsia.
+#         # TODO(): Enable when embedder works on fuchsia.
+#         public_deps +=
+#             [ "//flutter/shell/platform/common/cpp:common_cpp_unittests" ]
+#
+#         # These tests require GLFW and thus cannot run on fuchsia.
+#         public_deps += [ "//flutter/shell/platform/glfw/client_wrapper:client_wrapper_glfw_unittests" ]
+#       }
+#
+#       if (is_linux) {
+#         public_deps +=
+#             [ "//flutter/shell/platform/linux:flutter_linux_unittests" ]
+#       }
+#
+#       if (is_mac) {
+#         public_deps += [ "//flutter/shell/platform/darwin/macos:flutter_desktop_darwin_unittests" ]
+#       }
+#
+#       if (is_win) {
+#         public_deps += [
+#           "//flutter/shell/platform/windows:flutter_windows_unittests",
+#           "//flutter/shell/platform/windows/client_wrapper:client_wrapper_windows_unittests",
+#         ]
+#       }
+#     }
+#   }
+# }
 
 group("dist") {
   testonly = true
