--- a/flow/BUILD.gn
+++ b/flow/BUILD.gn
@@ -72,10 +72,16 @@ source_set("flow") {
 
   public_configs = [ "//flutter:config" ]
 
+  configs -= [ "//build/config/clang:find_bad_constructs" ]
+
+  cflags_cc = [
+    "-Wno-extra-semi",
+  ]
+
   deps = [
     "//flutter/common",
     "//flutter/fml",
-    "//third_party/skia",
+    "//skia",
   ]
 
   if (is_fuchsia && flutter_enable_legacy_fuchsia_embedder) {
@@ -121,63 +127,63 @@ if (enable_unittests) {
 
     public_deps = [
       "//flutter/testing:skia",
-      "//third_party/googletest:gtest",
+      # "//third_party/googletest:gtest",
     ]
 
     deps = [ ":flow" ]
   }
 
-  executable("flow_unittests") {
-    testonly = true
-
-    sources = [
-      "embedded_view_params_unittests.cc",
-      "flow_run_all_unittests.cc",
-      "flow_test_utils.cc",
-      "flow_test_utils.h",
-      "gl_context_switch_unittests.cc",
-      "layers/backdrop_filter_layer_unittests.cc",
-      "layers/clip_path_layer_unittests.cc",
-      "layers/clip_rect_layer_unittests.cc",
-      "layers/clip_rrect_layer_unittests.cc",
-      "layers/color_filter_layer_unittests.cc",
-      "layers/container_layer_unittests.cc",
-      "layers/image_filter_layer_unittests.cc",
-      "layers/layer_tree_unittests.cc",
-      "layers/opacity_layer_unittests.cc",
-      "layers/performance_overlay_layer_unittests.cc",
-      "layers/physical_shape_layer_unittests.cc",
-      "layers/picture_layer_unittests.cc",
-      "layers/platform_view_layer_unittests.cc",
-      "layers/shader_mask_layer_unittests.cc",
-      "layers/texture_layer_unittests.cc",
-      "layers/transform_layer_unittests.cc",
-      "matrix_decomposition_unittests.cc",
-      "mutators_stack_unittests.cc",
-      "raster_cache_unittests.cc",
-      "rtree_unittests.cc",
-      "skia_gpu_object_unittests.cc",
-      "testing/mock_layer_unittests.cc",
-      "testing/mock_texture_unittests.cc",
-      "texture_unittests.cc",
-    ]
-
-    deps = [
-      ":flow",
-      ":flow_fixtures",
-      ":flow_testing",
-      "//flutter/fml",
-      "//flutter/testing:skia",
-      "//flutter/testing:testing_lib",
-      "//third_party/dart/runtime:libdart_jit",  # for tracing
-      "//third_party/googletest:gtest",
-      "//third_party/skia",
-    ]
-
-    if (is_fuchsia && flutter_enable_legacy_fuchsia_embedder) {
-      sources += [ "layers/fuchsia_layer_unittests.cc" ]
-
-      deps += [ "//build/fuchsia/pkg:sys_cpp_testing" ]
-    }
-  }
+  # executable("flow_unittests") {
+  #   testonly = true
+  #
+  #   sources = [
+  #     "embedded_view_params_unittests.cc",
+  #     "flow_run_all_unittests.cc",
+  #     "flow_test_utils.cc",
+  #     "flow_test_utils.h",
+  #     "gl_context_switch_unittests.cc",
+  #     "layers/backdrop_filter_layer_unittests.cc",
+  #     "layers/clip_path_layer_unittests.cc",
+  #     "layers/clip_rect_layer_unittests.cc",
+  #     "layers/clip_rrect_layer_unittests.cc",
+  #     "layers/color_filter_layer_unittests.cc",
+  #     "layers/container_layer_unittests.cc",
+  #     "layers/image_filter_layer_unittests.cc",
+  #     "layers/layer_tree_unittests.cc",
+  #     "layers/opacity_layer_unittests.cc",
+  #     "layers/performance_overlay_layer_unittests.cc",
+  #     "layers/physical_shape_layer_unittests.cc",
+  #     "layers/picture_layer_unittests.cc",
+  #     "layers/platform_view_layer_unittests.cc",
+  #     "layers/shader_mask_layer_unittests.cc",
+  #     "layers/texture_layer_unittests.cc",
+  #     "layers/transform_layer_unittests.cc",
+  #     "matrix_decomposition_unittests.cc",
+  #     "mutators_stack_unittests.cc",
+  #     "raster_cache_unittests.cc",
+  #     "rtree_unittests.cc",
+  #     "skia_gpu_object_unittests.cc",
+  #     "testing/mock_layer_unittests.cc",
+  #     "testing/mock_texture_unittests.cc",
+  #     "texture_unittests.cc",
+  #   ]
+  #
+  #   deps = [
+  #     ":flow",
+  #     ":flow_fixtures",
+  #     ":flow_testing",
+  #     "//flutter/fml",
+  #     "//flutter/testing:skia",
+  #     "//flutter/testing:testing_lib",
+  #     "//third_party/dart/runtime:libdart_jit",  # for tracing
+  #     "//third_party/googletest:gtest",
+  #     "//third_party/skia",
+  #   ]
+  #
+  #   if (is_fuchsia && flutter_enable_legacy_fuchsia_embedder) {
+  #     sources += [ "layers/fuchsia_layer_unittests.cc" ]
+  #
+  #     deps += [ "//build/fuchsia/pkg:sys_cpp_testing" ]
+  #   }
+  # }
 }
