--- a/lib/ui/BUILD.gn
+++ b/lib/ui/BUILD.gn
@@ -123,10 +123,9 @@ source_set("ui") {
     "//flutter/flow",
     "//flutter/fml",
     "//flutter/runtime:test_font",
-    "//flutter/third_party/tonic",
-    "//third_party/dart/runtime/bin:dart_io_api",
+    "//flutter/dart_adapter",
+    "//skia",
     "//third_party/rapidjson",
-    "//third_party/skia",
   ]
 
   if (flutter_enable_skshaper) {
@@ -147,64 +146,64 @@ source_set("ui") {
   }
 }
 
-if (enable_unittests) {
-  test_fixtures("ui_unittests_fixtures") {
-    dart_main = "fixtures/ui_test.dart"
-    fixtures = [
-      "fixtures/DashInNooglerHat.jpg",
-      "fixtures/Horizontal.jpg",
-      "fixtures/Horizontal.png",
-      "fixtures/hello_loop_2.gif",
-      "fixtures/hello_loop_2.webp",
-    ]
-  }
-
-  executable("ui_benchmarks") {
-    testonly = true
-
-    public_configs = [ "//flutter:export_dynamic_symbols" ]
-
-    sources = [ "ui_benchmarks.cc" ]
-
-    deps = [
-      ":ui",
-      ":ui_unittests_fixtures",
-      "//flutter/benchmarking",
-      "//flutter/shell/common",
-      "//flutter/testing:fixture_test",
-    ]
-  }
-
-  executable("ui_unittests") {
-    testonly = true
-
-    public_configs = [ "//flutter:export_dynamic_symbols" ]
-
-    sources = [
-      "painting/image_dispose_unittests.cc",
-      "painting/image_encoding_unittests.cc",
-      "painting/vertices_unittests.cc",
-      "window/platform_configuration_unittests.cc",
-      "window/pointer_data_packet_converter_unittests.cc",
-    ]
-
-    deps = [
-      ":ui",
-      ":ui_unittests_fixtures",
-      "//flutter/common",
-      "//flutter/shell/common:shell_test_fixture_sources",
-      "//flutter/testing",
-      "//flutter/testing:dart",
-      "//flutter/testing:fixture_test",
-      "//flutter/third_party/tonic",
-      "//third_party/dart/runtime/bin:elf_loader",
-    ]
-
-    # TODO(https://github.com/flutter/flutter/issues/63837): This test is hard-coded to use a TestGLSurface so it cannot run on fuchsia.
-    if (!is_fuchsia) {
-      sources += [ "painting/image_decoder_unittests.cc" ]
-
-      deps += [ "//flutter/testing:opengl" ]
-    }
-  }
-}
+# if (enable_unittests) {
+#   test_fixtures("ui_unittests_fixtures") {
+#     dart_main = "fixtures/ui_test.dart"
+#     fixtures = [
+#       "fixtures/DashInNooglerHat.jpg",
+#       "fixtures/Horizontal.jpg",
+#       "fixtures/Horizontal.png",
+#       "fixtures/hello_loop_2.gif",
+#       "fixtures/hello_loop_2.webp",
+#     ]
+#   }
+#
+#   executable("ui_benchmarks") {
+#     testonly = true
+#
+#     public_configs = [ "//flutter:export_dynamic_symbols" ]
+#
+#     sources = [ "ui_benchmarks.cc" ]
+#
+#     deps = [
+#       ":ui",
+#       ":ui_unittests_fixtures",
+#       "//flutter/benchmarking",
+#       "//flutter/shell/common",
+#       "//flutter/testing:fixture_test",
+#     ]
+#   }
+#
+#   executable("ui_unittests") {
+#     testonly = true
+#
+#     public_configs = [ "//flutter:export_dynamic_symbols" ]
+#
+#     sources = [
+#       "painting/image_dispose_unittests.cc",
+#       "painting/image_encoding_unittests.cc",
+#       "painting/vertices_unittests.cc",
+#       "window/platform_configuration_unittests.cc",
+#       "window/pointer_data_packet_converter_unittests.cc",
+#     ]
+#
+#     deps = [
+#       ":ui",
+#       ":ui_unittests_fixtures",
+#       "//flutter/common",
+#       "//flutter/shell/common:shell_test_fixture_sources",
+#       "//flutter/testing",
+#       "//flutter/testing:dart",
+#       "//flutter/testing:fixture_test",
+#       "//flutter/third_party/tonic",
+#       "//third_party/dart/runtime/bin:elf_loader",
+#     ]
+#
+#     # TODO(https://github.com/flutter/flutter/issues/63837): This test is hard-coded to use a TestGLSurface so it cannot run on fuchsia.
+#     if (!is_fuchsia) {
+#       sources += [ "painting/image_decoder_unittests.cc" ]
+#
+#       deps += [ "//flutter/testing:opengl" ]
+#     }
+#   }
+# }
