--- a/testing/BUILD.gn
+++ b/testing/BUILD.gn
@@ -19,8 +19,8 @@ source_set("testing_lib") {
 
   public_deps = [
     "//flutter/fml",
-    "//third_party/googletest:gmock",
-    "//third_party/googletest:gtest",
+    # "//third_party/googletest:gmock",
+    # "//third_party/googletest:gtest",
   ]
   public_configs = [ "//flutter:config" ]
 }
@@ -39,29 +39,6 @@ source_set("testing") {
   public_deps = [ ":testing_lib" ]
 }
 
-source_set("dart") {
-  testonly = true
-
-  sources = [
-    "dart_isolate_runner.cc",
-    "dart_isolate_runner.h",
-    "elf_loader.cc",
-    "elf_loader.h",
-    "test_dart_native_resolver.cc",
-    "test_dart_native_resolver.h",
-  ]
-
-  public_deps = [
-    ":testing_lib",
-    "//flutter/common",
-    "//flutter/runtime",
-    "//flutter/runtime:libdart",
-    "//flutter/third_party/tonic",
-    "//third_party/dart/runtime/bin:elf_loader",
-    "//third_party/skia",
-  ]
-}
-
 source_set("skia") {
   testonly = true
 
@@ -75,7 +52,7 @@ source_set("skia") {
 
   public_deps = [
     ":testing_lib",
-    "//third_party/skia",
+    "//skia",
   ]
 }
 
@@ -88,47 +65,46 @@ source_set("fixture_test") {
   ]
 
   public_deps = [
-    ":dart",
     "//flutter/common",
-    "//flutter/runtime",
+    # "//flutter/runtime",
   ]
 }
 
 if (enable_unittests) {
-  source_set("vulkan") {
-    testonly = true
+  # source_set("vulkan") {
+  #   testonly = true
 
-    deps = [
-      ":skia",
-      "//flutter/fml",
-    ]
+  #   deps = [
+  #     ":skia",
+  #     "//flutter/fml",
+  #   ]
 
-    # SwiftShader only supports x86/x64_64
-    if (target_cpu == "x86" || target_cpu == "x64") {
-      configs += [ "//third_party/swiftshader_flutter:swiftshader_config" ]
-      deps += [ "//third_party/swiftshader_flutter:swiftshader_vulkan" ]
-    }
-  }
+  #   # SwiftShader only supports x86/x64_64
+  #   if (target_cpu == "x86" || target_cpu == "x64") {
+  #     configs += [ "//third_party/swiftshader_flutter:swiftshader_config" ]
+  #     deps += [ "//third_party/swiftshader_flutter:swiftshader_vulkan" ]
+  #   }
+  # }
 
-  # SwiftShader only supports x86/x64_64
-  if (target_cpu == "x86" || target_cpu == "x64") {
-    source_set("opengl") {
-      testonly = true
+  # # SwiftShader only supports x86/x64_64
+  # if (target_cpu == "x86" || target_cpu == "x64") {
+  #   source_set("opengl") {
+  #     testonly = true
 
-      configs += [ "//third_party/swiftshader_flutter:swiftshader_config" ]
+  #     configs += [ "//third_party/swiftshader_flutter:swiftshader_config" ]
 
-      sources = [
-        "test_gl_surface.cc",
-        "test_gl_surface.h",
-      ]
+  #     sources = [
+  #       "test_gl_surface.cc",
+  #       "test_gl_surface.h",
+  #     ]
 
-      deps = [
-        ":skia",
-        "//flutter/fml",
-        "//third_party/swiftshader_flutter:swiftshader_gl",
-      ]
-    }
-  }
+  #     deps = [
+  #       ":skia",
+  #       "//flutter/fml",
+  #       "//third_party/swiftshader_flutter:swiftshader_gl",
+  #     ]
+  #   }
+  # }
 
   # All targets on all platforms should be able to use the Metal utilities. On
   # platforms where Metal is not available, the tests must be skipped or
@@ -176,7 +152,6 @@ if (enable_unittests) {
       ":skia",
       ":testing",
       ":testing_fixtures",
-      "//flutter/runtime:libdart",
     ]
   }
 }
