--- a/testing/testing.gni
+++ b/testing/testing.gni
@@ -4,7 +4,6 @@
 
 import("//build/compiled_action.gni")
 import("//flutter/common/config.gni")
-import("//third_party/dart/build/dart/dart_action.gni")
 
 is_aot_test =
     flutter_runtime_mode == "profile" || flutter_runtime_mode == "release"
@@ -36,143 +35,6 @@ template("fixtures_location") {
   source_set(target_name) {
     public = []
     sources = [ location_source_path ]
-  }
-}
-
-# Generates the Dart kernel snapshot.
-#
-# Arguments
-#     dart_main (required): The Main Dart file.
-#
-#     dart_kernel (required): The path to the ouput kernel snapshot in the out
-#                             directory.
-template("dart_snapshot_kernel") {
-  testonly = true
-
-  assert(defined(invoker.dart_main), "The Dart Main file must be specified")
-  assert(defined(invoker.dart_kernel),
-         "The Dart Kernel file location must be specified")
-
-  dart_action(target_name) {
-    testonly = true
-
-    deps = [
-      # This generates the Frontend server snapshot used in this Dart action as
-      # well as the patched SDK.
-      "//third_party/dart/utils/kernel-service:frontend_server",
-    ]
-
-    if (is_aot_test) {
-      deps += [ "//flutter/lib/snapshot:strong_platform" ]
-    }
-
-    script = "$root_out_dir/frontend_server.dart.snapshot"
-
-    inputs = [ invoker.dart_main ]
-
-    outputs = [ invoker.dart_kernel ]
-
-    snapshot_depfile = "$target_gen_dir/snapshot_$target_name.depfile.d"
-    depfile = snapshot_depfile
-
-    args = [
-      "--sdk-root",
-      rebase_path("$root_out_dir/flutter_patched_sdk"),
-      "--target",
-      "flutter",
-      "--output-dill",
-      rebase_path(invoker.dart_kernel, root_out_dir),
-      "--depfile",
-      rebase_path(snapshot_depfile),
-    ]
-
-    if (flutter_runtime_mode == "release" ||
-        flutter_runtime_mode == "jit_release") {
-      args += [ "-Ddart.vm.product=true" ]
-    }
-
-    if (is_aot_test) {
-      args += [
-        "--aot",
-
-        # type flow analysis
-        "--tfa",
-      ]
-    }
-
-    args += [ rebase_path(invoker.dart_main) ]
-  }
-}
-
-# Generates an AOT snapshot from a kernel snapshot.
-#
-# Arguments:
-#
-#     dart_kernel (required): The path to the kernel snapshot.
-template("dart_snapshot_aot") {
-  testonly = true
-
-  assert(defined(invoker.dart_kernel),
-         "The Dart Kernel file location must be specified")
-
-  compiled_action(target_name) {
-    testonly = true
-
-    tool = "//third_party/dart/runtime/bin:gen_snapshot"
-
-    inputs = [ invoker.dart_kernel ]
-
-    # Custom ELF loader is used for Mac and Windows.
-    elf_object = "$target_gen_dir/assets/app_elf_snapshot.so"
-
-    outputs = [ elf_object ]
-
-    args = [
-      "--causal_async_stacks",
-      "--deterministic",
-      "--snapshot_kind=app-aot-elf",
-      "--elf=" + rebase_path(elf_object),
-      rebase_path(invoker.dart_kernel),
-    ]
-
-    forward_variables_from(invoker, [ "deps" ])
-  }
-}
-
-# Generates a kernel or AOT snapshot as necessary from the main Dart file.
-# Other Dart dependencies referenced by that main Dart file will be tracked.
-#
-# Arguments:
-#
-#     dart_main (required): The path to the main Dart file.
-template("dart_snapshot") {
-  assert(defined(invoker.dart_main), "The main Dart file must be specified.")
-
-  testonly = true
-
-  dart_snapshot_kernel_target_name = "_dsk_$target_name"
-  dart_snapshot_kernel_path = "$target_gen_dir/assets/kernel_blob.bin"
-  dart_snapshot_kernel(dart_snapshot_kernel_target_name) {
-    dart_main = invoker.dart_main
-    dart_kernel = dart_snapshot_kernel_path
-  }
-
-  snapshot_deps = []
-  snapshot_public_deps = [ ":$dart_snapshot_kernel_target_name" ]
-
-  if (is_aot_test) {
-    dart_snapshot_aot_target_name = "_dsa_$target_name"
-    dart_snapshot_aot(dart_snapshot_aot_target_name) {
-      dart_kernel = dart_snapshot_kernel_path
-      deps = [ ":$dart_snapshot_kernel_target_name" ]
-    }
-    snapshot_deps += [ ":$dart_snapshot_aot_target_name" ]
-  }
-
-  group(target_name) {
-    testonly = true
-    deps = snapshot_deps
-    public_deps = snapshot_public_deps
   }
 }
 
@@ -248,13 +110,13 @@ template("test_fixtures") {
 
   # If a Dart file is specified, snapshot it and place it in the generated
   # assets directory.
-  if (defined(invoker.dart_main)) {
-    dart_snapshot_target_name = "_ds_$target_name"
-    dart_snapshot(dart_snapshot_target_name) {
-      dart_main = invoker.dart_main
-    }
-    test_public_deps += [ ":$dart_snapshot_target_name" ]
-  }
+  # if (defined(invoker.dart_main)) {
+  #   dart_snapshot_target_name = "_ds_$target_name"
+  #   dart_snapshot(dart_snapshot_target_name) {
+  #     dart_main = invoker.dart_main
+  #   }
+  #   test_public_deps += [ ":$dart_snapshot_target_name" ]
+  # }
 
   group(target_name) {
     testonly = true
